tests/mm0_mmu/fail/bad-sort3.mm0
-- pure modifier not first 
free pure sort s9;